<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/dialog_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/new_comment"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleEditContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"

        android:layout_margin="10dp">
        <EditText
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/title"
            android:autofillHints="Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyEditContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/titleEditContainer"
        android:layout_weight="1">
        <EditText
            android:id="@+id/bodyComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:maxLines="6"
            android:hint="@string/write_something"
            android:autofillHints="Body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/addBtn"
        app:layout_constraintTop_toBottomOf="@id/bodyEditContainer"/>

    <TextView
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/add_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyEditContainer"/>


</androidx.constraintlayout.widget.ConstraintLayout>